--- a/package/src/renderer/@styles/base.css
+++ b/package/src/renderer/@styles/base.css
@@ -1,7 +1,3 @@
-ul {
-  list-style: none;
-}
-
 #root {
   height: 100vh;
   width: 100vw;
@@ -34,17 +30,29 @@ body {
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: color-mix(in srgb, var(--muted-foreground) 15%, transparent);
+  background-color: color-mix(
+    in srgb,
+    var(--muted-foreground) 15%,
+    transparent
+  );
   border-radius: 10px;
   transition: all 0.3s ease;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: color-mix(in srgb, var(--muted-foreground) 35%, transparent);
+  background-color: color-mix(
+    in srgb,
+    var(--muted-foreground) 35%,
+    transparent
+  );
 }
 
 ::-webkit-scrollbar-thumb:active {
-  background-color: color-mix(in srgb, var(--muted-foreground) 50%, transparent);
+  background-color: color-mix(
+    in srgb,
+    var(--muted-foreground) 50%,
+    transparent
+  );
 }
 
 /* 滚动条显示/隐藏控制类 */
@@ -154,7 +162,6 @@ textarea {
 .animate-typing-show {
   animation: typing-show 0.3s ease-out;
 }
-
 
 .pop {
   max-height: calc(100vh - 20px);
