--- a/package/src/renderer/components/editor/styles/code-block.css
+++ b/package/src/renderer/components/editor/styles/code-block.css
@@ -1,23 +1,26 @@
 /* Fira Code 字体 */
 @font-face {
   font-family: 'Fira Code';
-  src: url('../assets/fonts/FiraCode-Regular.woff2') format('woff2');
+  src: url('../../../assets/fonts/FiraCode-Regular.woff2') format('woff2');
   font-weight: 400;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
   font-family: 'Fira Code';
-  src: url('../assets/fonts/FiraCode-Medium.woff2') format('woff2');
+  src: url('../../../assets/fonts/FiraCode-Medium.woff2') format('woff2');
   font-weight: 500;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
   font-family: 'Fira Code';
-  src: url('../assets/fonts/FiraCode-Bold.woff2') format('woff2');
+  src: url('../../../assets/fonts/FiraCode-Bold.woff2') format('woff2');
   font-weight: 700;
   font-style: normal;
+  font-display: swap;
 }
 
 /* CodeBlock Shiki 高亮样式 */
